Fix legend overflow bug on dashboard vis

--- a/src/ui/public/visualize/components/_visualization.scss
+++ b/src/ui/public/visualize/components/_visualization.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   height: auto;
   width: 100%;
-  overflow: auto;
+  overflow: scroll;
   position: relative;
   padding: $euiSizeS;
   flex: 1 1 100%;
